syntax = "proto3";

import "google/protobuf/any.proto";

package Common;

message PagedList {
    int32 pageNumber = 1;
    int32 pageSize = 2;
    repeated google.protobuf.Any items = 3;
}
